19990610-09:30 CET Patrick Mast (Changes made by Jose Lalin)
  * source/rtl/asort.prg
    Resloved bug (Changed line 28 )

19990610-10:30 Alexander Kresin ( files posted by Marek Horodyski )
  + source/rtl/natmsg/msgpl852.c
  + source/rtl/natmsg/msgplmaz.c
    National language message files for Polish

19990609-12:55 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/files.c
    - Set _fmode to O_BINARY before using creat(),
      then restore to previous value afterwards
  * source/tools/asciisum.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/ascpos.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/atdiff.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/chareven.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/charmix.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/charodd.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/chrcount.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/chrfirst.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/chrtotal.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/hb_f.c
    - HARBOUR function names must be in upper case
  * source/tools/strcount.c
    - HARBOUR function names must be in upper case
    - HARBOUR functions must have a void argument list
  * source/tools/strcspn.c
    - HARBOUR function names must be in upper case