@@ -1,0 +1,18 @@
+# $Id$
+# Makefile for DOS DJGPP
+# Usage:
+# make -r -f makerunr.dos <target>
+# where <target> is the name of compiled file without extension
+#
+include ..\..\makedos.env
+
+TARGET=$(MAKECMDGOALS)
+
+$(TARGET): $(TARGET).exe
+
+$(TARGET).exe: $(TARGET).o
+	$(CC) $? -L$(HARBOURDIR)/libs -lharb -o $@ 
+
+$(TARGET).o: $(TARGET).c
+	$(CC) $(CFLAGS) -c -o $@ $?
+
