@@ -1,0 +1,4 @@
+rem runner.c -> runner.exe using gcc (djgpp)
+
+make -r -fmakerunr.dos runner
+
