@@ -1,3 +1,11 @@
+19990610-11:40 EDT David G. Holm <dholm@jsd-llc.com>
+  + tests/working/makerunr.dos
+    - New make file to build RUNNER.EXE using DJGPP
+  * tests/working/runner.c
+    - Added 'static' to several forward declarations
+  + tests/working/runrdos.bat
+    - New batch file to build RUNNER.EXE using DJGPP
+
 19990610-09:30 CET Patrick Mast (Changes made by Jose Lalin)
   * source/rtl/asort.prg
     Resloved bug (Changed line 28 )
